@@ -1,4 +1,0 @@
-<?php
-require_once dirname(dirname(__FILE__)).'/shopmodxtemplate.class.php';
-class ShopmodxTemplate_mysql extends ShopmodxTemplate{}
-?>
