@@ -1,10 +1,0 @@
-<?php
-$xpdo_meta_map['ShopmodxTemplate']= array (
-  'package' => 'Shopmodx',
-  'version' => '1.1',
-  'extends' => 'modTemplate',
-  'fields' => 
-  array (),
-  'fieldMeta' => 
-  array (),
-);
